<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.4">
  <DUT Name="ASCF_CC_OPCUACS_ConnectionHandle" Id="{5c571084-2d3d-4ca8-a344-11562d4eb91e}">
    <Declaration><![CDATA[TYPE ASCF_CC_OPCUACS_ConnectionHandle :
STRUCT
	Handle				: DWORD				:= 16#0000_0000;			//Connection Handle 
	State				: ASCF_State_Internals;										//Connection State
	Status				: DWORD				:= 16#0000_0000;			//Status
	ReaderError			: BOOL				:= FALSE;					//Reader Group Error
	WriterError			: BOOL				:= FALSE;					//Writer Group Error
	NamespaceIndexCount	: USINT				:= 0;						//Number of Namspaces
	NamespaceIndexList	: ARRAY[0..4] OF UINT;						//Namespaces
	ScheduleData		: ASCF_CC_OPCUACS_ScheduleData;							//Schedule data of a connection, to coordinate access to OPC UA functions.
	ConnectionStatus	: ASCF_CC_OPCUACS_ConnectionStatus;						//Connection Status (For more information refer to "OPC_UA_ConnectionGetStatus")
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>